addded core function for renaming

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.tiff
 *.DS_Store
 *.png
+local_data/703_cd45/sk2_copy/raw/lab-CCLF,condition-unknown,acquisition_date,year-2018,month-00,day-99,minute-0,well-A02,tile_computation-02,z_depth-0,channel-BRIGHTFIELD,is_mask-false
